--- a/MSBank/View/Index/index.html
+++ b/MSBank/View/Index/index.html
@@ -28,7 +28,7 @@
             </div>
             <section class="panel panel-default">
               <header class="panel-heading"> 民生门户</header>
-              <header class="panel-heading">  <a href="{:U('Index/RegisterStore')}" class="btn btn-s-md btn-primary btn-rounded">新增门店</a></header>
+              <header class="panel-heading">  <a href="{:U('Index/Register')}" class="btn btn-s-md btn-primary btn-rounded">新增门店</a></header>
               <div class="table-responsive">
                 <table class="table table-striped m-b-none" data-ride="datatables">
                   <thead>
@@ -47,7 +47,7 @@
             </section>
           </section>
         </section>
-        
+
       <aside class="bg-light lter b-l aside-md hide" id="notes">
         <div class="wrapper">Notification</div>
       </aside>
