--- a/MSBank/View/Index/register.html
+++ b/MSBank/View/Index/register.html
@@ -6,12 +6,14 @@
 <meta name="description" content="app, web app, responsive, admin dashboard, admin, flat, flat ui, ui kit, off screen nav" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 <link rel="stylesheet" href="__PUBLIC__/css/app.v2.css" type="text/css" />
+<script src="__PUBLIC__/js/jquery.js" type="text/javascript"></script>
+<script src="__PUBLIC__/js/area.js" type="text/javascript"></script>
 <!--[if lt IE 9]> <script src="js/ie/html5shiv.js" cache="false"></script> <script src="js/ie/respond.min.js" cache="false"></script> <script src="js/ie/excanvas.js" cache="false"></script> <![endif]-->
 </head>
 <body>
 <section class="vbox">
   <section>
-    <section class="hbox stretch"> 
+    <section class="hbox stretch">
       <section id="content">
         <section class="vbox">
           <section class="scrollable padder">
@@ -33,31 +35,19 @@
                       <div class="form-group pull-in clearfix">
                         <div  class="col-sm-3">
                         <label>省份</label>
-                          <select data-required="true" class="form-control m-t">
-                            <option value="">Please choose</option>
-                            <option value="foo">Foo</option>
-                            <option value="bar">Bar</option>
-                          </select>
+                          <div id="slt_sheng"></div>
                         </div>
                         <div class="col-sm-3">
                           <label>城市</label>
-                          <select data-required="true" class="form-control m-t">
-                            <option value="">Please choose</option>
-                            <option value="foo">Foo</option>
-                            <option value="bar">Bar</option>
-                          </select>
+                          <div id="slt_shi"></div>
                         </div>
                         <div class="col-sm-3">
                           <label>区/镇</label>
-                          <select data-required="true" class="form-control m-t">
-                            <option value="">Please choose</option>
-                            <option value="foo">Foo</option>
-                            <option value="bar">Bar</option>
-                          </select>
+                          <div id="slt_xian"></div>
                         </div>
                       </div>
                       <div class="form-group">
-                        <label>地址</label>
+                        <label>详细地址</label>
                         <input type="text" class="form-control" data-type="email" data-required="true">
                       </div>
                       <div class="form-group pull-in clearfix">
@@ -90,7 +80,7 @@
                         <label>客服电话</label>
                         <input type="text" class="form-control" data-type="email" data-required="true">
                       </div>
-                     
+
                       <div class="form-group">
                         <label>结算方式</label>
                         <select data-required="true" class="form-control m-t">
