--- a/Web/Manage/View/CMBC/register.html
+++ b/Web/Manage/View/CMBC/register.html
@@ -1,16 +1,6 @@
-﻿<!DOCTYPE html>
-<html lang="en" class="app">
-<head>
-<meta charset="utf-8" />
-<title>民生商户注册</title>
-<meta name="description" content="app, web app, responsive, admin dashboard, admin, flat, flat ui, ui kit, off screen nav" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-<link rel="stylesheet" href="__PUBLIC__/CMBC/css/app.v2.css" type="text/css" />
-<script src="__PUBLIC__/CMBC/js/jquery.js" type="text/javascript"></script>
+﻿<extend name="Public/base_logged" />
+<block name="body">
 <script src="__PUBLIC__/CMBC/js/area.js" type="text/javascript"></script>
-<!--[if lt IE 9]> <script src="js/ie/html5shiv.js" cache="false"></script> <script src="js/ie/respond.min.js" cache="false"></script> <script src="js/ie/excanvas.js" cache="false"></script> <![endif]-->
-</head>
-<body>
 <section class="vbox">
   <section>
     <section class="hbox stretch">
@@ -106,8 +96,6 @@
     </section>
   </section>
 </section>
-<script src="__PUBLIC__/CMBC/js/app.v2.js"></script> <!-- Bootstrap --> <!-- App --> <!-- parsley -->
-<script src="__PUBLIC__/CMBC/js/parsley/parsley.min.js" cache="false"></script>
-<script src="__PUBLIC__/CMBC/js/parsley/parsley.extend.js" cache="false"></script>
+</block>
 </body>
 </html>
