--- a/Web/Manage/View/CMBC/modstore.html
+++ b/Web/Manage/View/CMBC/modstore.html
@@ -1,113 +1,109 @@
-﻿<!DOCTYPE html>
-<html lang="en" class="app">
-<head>
-<meta charset="utf-8" />
-<title>民生商户注册</title>
-<meta name="description" content="app, web app, responsive, admin dashboard, admin, flat, flat ui, ui kit, off screen nav" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-<link rel="stylesheet" href="__PUBLIC__/CMBC/css/app.v2.css" type="text/css" />
-<script src="__PUBLIC__/CMBC/js/jquery.js" type="text/javascript"></script>
-<script src="__PUBLIC__/CMBC/js/area.js" type="text/javascript"></script>
-<!--[if lt IE 9]> <script src="js/ie/html5shiv.js" cache="false"></script> <script src="js/ie/respond.min.js" cache="false"></script> <script src="js/ie/excanvas.js" cache="false"></script> <![endif]-->
-</head>
-<body>
+﻿<extend name="Public/base_logged" />
+<script src="__PUBLIC__/CMBC/js/area.js"  type="text/javascript"></script>
+<block name="body">
 <section class="vbox">
-  <section>
-    <section class="hbox stretch">
-      <section id="content">
-        <section class="vbox">
-          <section class="scrollable padder">
-            <div class="row">
-              <div class="col-sm-6">
-                <form data-validate="parsley" method="post" name="RegisterStore" action="CMBC/RegisterStore">
-                  <section class="panel panel-default">
-                    <header class="panel-heading"> <span class="h4">商户注册</span> </header>
-                    <div class="panel-body">
-                      <p class="text-muted">Please fill the information to continue</p>
-                      <div class="form-group">
-                        <label>商户简称</label>
-                        <input type="text" name="mchntName" class="form-control" data-required="true">
-                      </div>
-                      <div class="form-group">
-                        <label>商户全称</label>
-                        <input type="text" name="mchntFullName"  class="form-control"   data-required="true">
-                      </div>
-                      <div class="form-group pull-in clearfix">
-                        <div  class="col-sm-3">
-                        <label>省份</label>
-                          <div id="slt_sheng"></div>
-                        </div>
-                        <div class="col-sm-3">
-                          <label>城市</label>
-                          <div id="slt_shi"></div>
-                        </div>
-                        <div class="col-sm-3">
-                          <label>区/镇</label>
-                          <div id="slt_xian"></div>
-                        </div>
-                      </div>
-                      <div class="form-group">
-                        <label>详细地址</label>
-                        <input type="text" class="form-control" name="addr" data-required="true">
-                      </div>
-                      <div class="form-group pull-in clearfix">
-                      <div class="col-sm-6">
-                        <label>营业执照号</label>
-                        <input type="text" class="form-control" name="licId" data-type="number" data-required="true">
-                        </div>
-                        <div class="col-sm-6">
-                        <label>营业执照有效期</label>
-                        <input type="text" class="form-control" name="licValidity"  data-type="number" data-required="true">
-                        </div>
-                      </div>
-                      <div class="form-group">
-                        <label>法人/联系人</label>
-                        <input type="text" class="form-control" name="corpName" data-required="true">
-                      </div>
-                      <div class="form-group">
-                        <label>法人/联系人证件号</label>
-                        <input type="text" class="form-control" name="idtCard" data-type="number" data-required="true">
-                      </div>
-                      <div class="form-group">
-                        <label>负责人</label>
-                        <input type="text" class="form-control" name="contactName" data-required="true">
-                      </div>
-                      <div class="form-group">
-                        <label>负责人手机号</label>
-                        <input type="text" class="form-control" name="telephone" data-type="phone" data-required="true">
-                      </div>
-                      <div class="form-group">
-                        <label>客服电话</label>
-                        <input type="text" class="form-control" name="servTel" data-type="phone" data-required="true">
-                      </div>
+	<section>
+		<section class="hbox stretch">
+			<section id="content">
+				<section class="vbox">
+					<section class="scrollable padder">
+						<div class="row">
+							<div class="col-sm-6">
+								<form data-validate="parsley" method="post" name="RegisterStore"
+									action="CMBC/RegisterStore">
+									<section class="panel panel-default">
+										<input type="hidden" name="id" value="{$store.id}">
+										<header class="panel-heading">
+											<span class="h4">商户注册</span>
+										</header>
+										<div class="panel-body">
+											<p class="text-muted">该输入框不能空,请填写信息</p>
+											<div class="form-group">
+												<label>商户简称</label> <input type="text" name="mchntName"
+													value="{$store.mchntname}" class="form-control"
+													data-required="true">
+											</div>
+											<div class="form-group">
+												<label>商户全称</label> <input type="text" name="mchntFullName"
+													value="{$store.mchntfullname}" class="form-control"
+													data-required="true">
+											</div>
+											<div class="form-group pull-in clearfix">
+												<div class="col-sm-3">
+													<label>省份</label>
+													<div id="slt_sheng"></div>
+												</div>
+												<div class="col-sm-3">
+													<label>城市</label>
+													<div id="slt_shi"></div>
+												</div>
+												<div class="col-sm-3">
+													<label>区/镇</label>
+													<div id="slt_xian"></div>
+												</div>
+											</div>
+											<div class="form-group">
+												<label>详细地址</label> <input type="text" class="form-control"
+													name="addr" value="{$store.address}"  data-required="true">
+											</div>
+											<div class="form-group pull-in clearfix">
+												<div class="col-sm-6">
+													<label>营业执照号</label> <input type="text"
+														class="form-control" name="licId" value="{$store.licid}" data-type="number"
+														data-required="true">
+												</div>
+												<div class="col-sm-6">
+													<label>营业执照有效期</label> <input type="text"
+														class="form-control" name="licValidity" value="{$store.licvalidity}" data-type="number"
+														data-required="true">
+												</div>
+											</div>
+											<div class="form-group">
+												<label>法人/联系人</label> <input type="text"
+													class="form-control" name="corpName" value="{$store.corpname}" data-required="true">
+											</div>
+											<div class="form-group">
+												<label>法人/联系人证件号</label> <input type="text"
+													class="form-control" name="idtCard" value="{$store.idtcard}" data-type="number"
+													data-required="true">
+											</div>
+											<div class="form-group">
+												<label>负责人</label>
+												 <input type="text" class="form-control" name="contactName" value="{$store.contactname}" data-required="true">
+											</div>
+											<div class="form-group">
+												<label>负责人手机号</label> <input type="text"
+													class="form-control" name="telephone" value="{$store.telephone}" data-type="phone"
+													data-required="true">
+											</div>
+											<div class="form-group">
+												<label>客服电话</label>
+												<input type="text" class="form-control" name="servTel" value="{$store.servtel}" data-type="phone" data-required="true">
+											</div>
 
-                      <div class="form-group">
-                        <label>结算方式</label>
-                        <select data-required="true" name="autoSettle"  class="form-control m-t">
-                            <option value="">--请选择--</option>
-                            <option value="1">自动结算</option>
-                            <option value="2">手工提现</option>
-                          </select>
-                      </div>
-                    </div>
-                    <footer class="panel-footer text-right bg-light lter">
-                      <button type="submit" class="btn btn-success btn-s-xs">提交</button>
-                    </footer>
-                  </section>
-                </form>
-              </div>
-            </div>
-          </section>
-        </section>
-      </section>
-      <aside class="bg-light lter b-l aside-md hide" id="notes">
-        <div class="wrapper">Notification</div>
-      </aside>
-    </section>
-  </section>
+											<div class="form-group">
+												<label>结算方式</label>
+												<select data-required="true" name="autoSettle" class="form-control m-t">
+													<option value="">--请选择--</option>
+													<option value="1">自动结算</option>
+													<option value="2">手工提现</option>
+												</select>
+											</div>
+										</div>
+										<footer class="panel-footer text-right bg-light lter">
+											<button type="submit" class="btn btn-success btn-s-xs">提交</button>
+										</footer>
+									</section>
+								</form>
+							</div>
+						</div>
+					</section>
+				</section>
+			</section>
+			<aside class="bg-light lter b-l aside-md hide" id="notes">
+				<div class="wrapper">Notification</div>
+			</aside>
+		</section>
+	</section>
 </section>
-<script src="__PUBLIC__/CMBC/js/app.v2.js"></script> <!-- Bootstrap --> <!-- App --> <!-- parsley -->
-<script src="__PUBLIC__/CMBC/js/parsley/parsley.min.js" cache="false"></script>
-<script src="__PUBLIC__/CMBC/js/parsley/parsley.extend.js" cache="false"></script>
-</body>
-</html>
+</block>
